# ps_2_ex3_database

./: .env  .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  environment.yml  nba_insights.ipynb  nba_insights.md  pyproject.toml  warm_up.ipynb
nba/: data_loader.py  s01_data_wrangling.py  s02_data_visualisation.py
