[tool.poetry]
name = "nba"
version = "0.1.0"
description = "This package enables the analysis of an NBA dataset. It was created for PS2/Ex.3/D100."
authors = ["BenNorsk <benjamin.brueckner@bluewin.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
